--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^2.4.4"
     },
     "dependencies": {
-        "@glidejs/glide": "^3.6.0"
+        "@glidejs/glide": "^3.6.0",
+        "axios": "^1.4.0",
+        "dayjs": "^1.11.9"
     }
 }
